[package]
name = "rust_filecrawler_fltk"
version = "0.1.0"
authors = ["Bob Hoeppner <32035397+bobahop@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fltk = { version ="1.0.14", features = ["fltk-bundled"] }
regex = "1.5.6"
walkdir = "2"
